Fix CI/build failures: correct addToast API usage and replace getFirst() with get(0)
Co-authored-by: EricBP0 <120690588+EricBP0@users.noreply.github.com>